# Sentiment-Analysis-using-BiLSTM

./: .flake8  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MODEL_CARD.md  README.md  main.py  pyproject.toml  requirements.txt
Data/Processed_data/: validation_processed.csv  y_train.pkl  y_val.pkl
Notebooks/: Sentiment_Analysis_BiLSTM.ipynb
Notebooks/results/: classification_report.txt  final_inference.md  metrics.txt  training_history.csv
artifacts/: tokenizer.pkl
examples/: README.md  inference_demo.py
src/: README.md  config.py  evaluate.py  model.py  preprocess.py  run_pipeline.py  text_tokenizer.py  train.py  utils.py
tests/: test_preprocess.py  test_text_tokenizer.py
