[project]
name = "rnn-new"
version = "0.1.0"
description = "End-to-end Twitter sentiment analysis using BiLSTM"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "tensorflow==2.15.0",
    "numpy==1.25.2",
    "pandas==2.2.3",
    "scikit-learn==1.3.2",
    "matplotlib==3.8.1",
    "seaborn==0.12.2",
    "pyyaml==6.0",
]

[tool.uv.workspace]
members = [
    "src",
]
